--- a/Core/MVVM/View/MainPageView.xaml
+++ b/Core/MVVM/View/MainPageView.xaml
@@ -4,6 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:NewCryptoApp.Core.MVVM.View"
+      xmlns:UI="clr-namespace:NewCryptoApp.Core.UI"
+      xmlns:Template="clr-namespace:NewCryptoApp.Core.UI.Template"
       xmlns:viewModels="clr-namespace:NewCryptoApp.Core.MVVM.ViewModel"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -11,81 +13,25 @@
     <Page.DataContext>
         <viewModels:MainPageViewModel/>
     </Page.DataContext>
-    <Page.Resources>
-        <Style x:Key="BottomAlignedTextBoxStyle" TargetType="TextBox">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0,0,0,1"/>
-            <Setter Property="BorderBrush" Value="Black"/>
-            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
-        </Style>
-    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="29*"/>
             <RowDefinition Height="121*"/>
         </Grid.RowDefinitions>
-        <Grid Background="Gray" >
-            <Border Width="200px" Background="LightGray" Height="50px"  HorizontalAlignment="Left" Margin="50 0 0 0"  BorderThickness="1,1,1,1" CornerRadius="7">
-                <Grid VerticalAlignment="Center"  Background="Transparent">
+        <Border Padding="5" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Background="Gray" BorderThickness="1,1,1,1" CornerRadius="15">
+            <StackPanel  Background="Transparent" Orientation="Horizontal" >
+                <UI:LimitComponent RefreshCommand="{Binding Update}" Limit="{Binding Limit,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 0 "/>
+                <UI:BigButtonComponent Header="{DynamicResource Info}" Command="{Binding ToInfo}" Image="\Image\Icons\Info.png" Margin="10 0 10 0 "/>
+                <UI:BigButtonComponent Header="{DynamicResource Chart}" Command="{Binding ToGraphics}" Image="\Image\Icons\Chart.png" Margin="10 0 10 0 "/>
+            </StackPanel>
+        </Border>
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="9*" />
-                        <ColumnDefinition Width="17*" />
-                        <ColumnDefinition Width="7*" />
-                    </Grid.ColumnDefinitions>
-                    <Label Content="{DynamicResource Limit}"  HorizontalAlignment="Center" Width="52"/>
-                    <TextBox Grid.Column="1" Margin="5,0,5,0" Text="{Binding Limit,Mode=TwoWay}"  Style="{StaticResource BottomAlignedTextBoxStyle}"/>
-                    <Button Grid.Column="2" BorderBrush="Transparent"  Command="{Binding Update}">
-                        <StackPanel>
-                            <Image Source="\Image\Icons\Refresh.png" Width="18" Height="20" />
-                        </StackPanel>
-                    </Button>
-                </Grid>
-            </Border>
-            <Border Width="200px" Background="Gray" Height="50px"  HorizontalAlignment="Center" BorderThickness="1,1,1,1" CornerRadius="7">
-                <Button BorderBrush="Transparent" Command="{Binding ToInfo}">
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                        <Label Margin="10 " Content="{DynamicResource Info}"/>
-                        <Image Source="\Image\Icons\Info.png" Width="18" Height="20" />
-                    </StackPanel>
-                </Button>
-            </Border>
-            <Border Width="200px" Background="Gray" Height="50px"  HorizontalAlignment="Right" Margin="50 0 50 0"  BorderThickness="1,1,1,1" CornerRadius="7">
-                <Button BorderBrush="Transparent" Command="{Binding ToGraphics}">
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                        <Label Margin="10 " Content="{DynamicResource Chart}"/>
-                        <Image Source="\Image\Icons\Chart.png" Width="18" Height="20" />
-                    </StackPanel>
-                </Button>
-            </Border>
-
-        </Grid>
-        
-        <ListBox  HorizontalContentAlignment="Stretch" Background="Transparent" Grid.Row="1" ItemsSource="{Binding Coins,Mode=TwoWay}" SelectedItem="{Binding SelectedCoin}">
-            
-            <ListBox.ItemTemplate>
+        <UI:ListBoxComponent Grid.Row="1" ItemsSoure="{Binding Coins,Mode=TwoWay}" SelectedItems="{Binding SelectedCoin, Mode=TwoWay}">
+            <UI:ListBoxComponent.AdditionalContent>
                 <DataTemplate>
-                        <StackPanel    Orientation="Horizontal">
-                            <Image Source="{Binding Image}" Height="50px"  Margin=" 5 5 20 5"/>
-                            
-                            <StackPanel Orientation="Vertical">
-                                <StackPanel Orientation="Horizontal"  >
-                                    <TextBlock Text="{Binding Name}" HorizontalAlignment="Left" Margin=" 5 5 5 5"/>
-                                    
-                                    <TextBlock Text="{Binding LastUpdate}"  HorizontalAlignment="Right" Margin=" 5 5 5 5"/>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal"  >
-                                    <TextBlock Text="{Binding Id}" Margin=" 5 5 5 5"/>
-                                    <TextBlock Text="{Binding Symbol}" HorizontalAlignment="Left"  Margin=" 5 5 5 5"/>
-                                </StackPanel>
-                                
-
-                            </StackPanel>
-                           
-                           
-                        </StackPanel>
+                    <Template:TemplateCoinDTO/>
                 </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            </UI:ListBoxComponent.AdditionalContent>
+        </UI:ListBoxComponent>
     </Grid>
 </Page>
