--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,12 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NewCryptoApp"
+        xmlns:UI="clr-namespace:NewCryptoApp.Core.UI"
         xmlns:viewModels="clr-namespace:NewCryptoApp.Core.MVVM.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="800">
-    <Window.Resources>
-        
-    </Window.Resources>
+        Title="Crypto App" Height="500" Width="800">
     <Window.DataContext>
         <viewModels:MainWindowViewModel/>
     </Window.DataContext>
@@ -19,41 +17,11 @@
             <RowDefinition Height="453*"/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Height="76" >
-            <Button Style="{StaticResource MenuItemButton}" Command="{Binding GoToHomePage}">
-                <Button.Content>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Label FontSize="16" Content="{DynamicResource Home}"/>
-                        <Image Source="/Image/Icons/Home.png" Width="30"/>
-                    </StackPanel>
-                </Button.Content>
-            </Button>
-            <Button Style="{StaticResource MenuItemButton}" Command="{Binding GoToFindPage}">
-                <Button.Content>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Label FontSize="16" Content="{DynamicResource Find}"/>
-                        <Image Source="/Image/Icons/Search.png" Width="30"/>
-                    </StackPanel>
-                </Button.Content>
-            </Button>
-            <Button Style="{StaticResource MenuItemButton}" Command="{Binding GoToConverterPage}">
-                <Button.Content>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Label FontSize="16" Content="{DynamicResource Convertor}"/>
-                        <Image Source="/Image/Icons/Convertor.png" Width="30"/>
-                    </StackPanel>
-                </Button.Content>
-            </Button>
-            <Button Style="{StaticResource MenuItemButton}" Command="{Binding GoToSettingPage}">
-                <Button.Content>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Label FontSize="16" Content="{DynamicResource Settings}"/>
-                        <Image Source="/Image/Icons/Settings.png" Width="30"/>
-                    </StackPanel>
-                </Button.Content>
-            </Button>
+            <UI:MenuButtonComponent Header="{DynamicResource Home}" Command="{Binding GoToHomePage}" Image="/Image/Icons/Home.png"/>
+            <UI:MenuButtonComponent Header="{DynamicResource Find}" Command="{Binding GoToFindPage}" Image="/Image/Icons/Search.png"/>
+            <UI:MenuButtonComponent Header="{DynamicResource Convertor}" Command="{Binding GoToConverterPage}" Image="/Image/Icons/Convertor.png"/>
+            <UI:MenuButtonComponent Header="{DynamicResource Settings}" Command="{Binding GoToSettingPage}" Image="/Image/Icons/Settings.png"/>
         </StackPanel>
-
         <Frame  Content="{Binding Content,Mode=TwoWay}" Grid.Row="1" Name="MainFrame" NavigationUIVisibility="Hidden" Panel.ZIndex="1"/>
-
     </Grid>
 </Window>
